--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title> put your webpage title here </Harper's Webpage>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">  
 </head>
-<body>
+<body bgcolor=00AAFF>
 put your webpage’s content here
   
   <p>
@@ -13,5 +13,5 @@ put your webpage’s content here
   <!-- THIS IS AN HTML COMMENT!!! -->
   <!-- You should go to Dave Raggett's page for help starting your webpage!!!-->
   <!-- http://www.w3.org/MarkUp/Guide/ -->
-</body bgcolor=00AAFF>
+</body>
 </html>
